<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:padding="5dp" >

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/back" />

    <Button
        android:id="@+id/insert_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/back_button"
        android:text="@string/tweet_edit" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/insert_button"
        android:text="@string/delete" />

    <Button
        android:id="@+id/check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/delete_button"
        android:text="@string/check" />

    <EditText
        android:id="@+id/tweet_edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/insert_button"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="left|top"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</RelativeLayout>